src/index.css
/* ... */
@media (max-width: 600px) {
  div.box {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }

  div.device {
    padding: 30px;
  }
  div.plans {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 1rem;
    margin-top: 60px;
  }
  div.row {
    grid-template-columns: repeat(2, 1fr);
  }

  div.trial {
    display: block;
    text-align: center;
  }
  div.trailinner {
    padding: 10px;
  }

  div.collections {
    display: block;
    gap: 1px;
  }

  div.collections > button:nth-child(1) {
    width: 90%;
  }

  .movies-box-box {
    padding-top: 150px;
  }
}

@media screen and (max-width: 920px) {
  .nav-links {
    display: none;
  }
  div.toggle {
    display: block;
  }
  nav ul li a {
    padding: 10px;
  }
  nav ul {
    margin-top: 30px;
  }
}

@media screen and (max-width: 800px) {
  div.swipe {
    display: none;
  }

  .category:nth-child(3) {
    display: none;
  }
  .hidden-md-and-up {
    display: block;
  }

  div.category {
    padding: 10px;
    border-radius: 10px;
  }

  .navbar-para {
    padding: 0px 0px;
  }
  div.faq-header {
    display: block;
  }

  div.faq-questions {
    grid-template-columns: repeat(1, 1fr);
  }

  div.logo a img {
    width: 170px;
  }

  div.profile {
    text-align: center;
  }

  .det {
    display: block;
    text-align: center;
    margin-left: -20px;
  }
}

